Add google, mail and anonymous auth providerby firebase

--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -126,6 +126,9 @@
         <button type="button" class="ghost" (click)="continueAsGuest()">
           Entra come ospite
         </button>
+        <button type="button" class="ghost" (click)="continueWithGoogle()">
+          Continua con Google
+        </button>
       </div>
     </form>
   </div>
