Refactoring code and add icon, create shared folder for entity

--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -3,7 +3,7 @@
     <p class="brand-name"><span class="color-text">Cine</span>Match</p>
     <p>Smetti di cercare, inizia a guardare</p>
     <div class="brand-logo">
-      <img src="../../../assets/imgs/CineMatch_logo.JPG" alt="CineMatch Logo" />
+      <img src="assets/imgs/CineMatch_logo.JPG" alt="CineMatch Logo" />
     </div>
   </div>
 
