--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,7 +24,7 @@ $primary-color-glow-strong: rgba($primary-color, 0.45);
 	--color-primary-softer: #{$primary-color-softer};
 	--color-primary-glow: #{$primary-color-glow};
 	--color-primary-glow-strong: #{$primary-color-glow-strong};
-	--color-on-primary: #0b021c;
+	--color-on-primary: #f5f7fa;
 }
 
 html,
