Refactor code structure for improved readability and maintainability

--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -1,9 +1,7 @@
 <section class="auth-wrapper">
   <div class="brand">
-    <p class="brand-name"><span class="color-text">Cine</span>Match</p>
-    <p>Smetti di cercare, inizia a guardare</p>
-    <div class="brand-logo">
-      <img src="assets/imgs/CineMatch_logo.JPG" alt="CineMatch Logo" />
+    <div class="brand-banner">
+      <img src="assets/imgs/CineMatch_banner.JPG" alt="CineMatch banner" />
     </div>
   </div>
 
