--- a/src/app/pages/results/results.component.html
+++ b/src/app/pages/results/results.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <section class="results">
   <ng-container *ngIf="hasResult(); else emptyState">
     <header class="results-header">
